# jimini

./: LICENSE  Notes.md  README.md  README.scaffold.md  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.css  App.tsx  Tauri.ts  UrlHistory.ts  Util.ts
src-image/: jimini-icon.xcf
src-tauri/: Cargo.toml  Desktop.template  tauri.conf.json
src-tauri/capabilities/: permissions.json
src-tauri/src/: main.rs
src/Data/: Bookmark.ts  Certificate.ts  Failure.ts  GeminiLine.ts  GeminiLink.ts  GeminiMimeType.ts  GeminiResponse.ts  Prompt.ts  Redirect.ts  Settings.ts  Success.ts
src/Stores/: BookmarkLinksStore.ts  BookmarksStore.ts  SettingsStore.ts
src/Ui/: JiminiLink.ts
src/components/: BookmarkEditPanel.tsx  BookmarkLink.tsx  BookmarkPanel.tsx  BookmarkSelectPanel.tsx  ClosePanel.tsx  ColorSchemePicker.tsx  Copyright.tsx  DragHandle.tsx  DropTarget.tsx  HamburgerMenu.tsx  Header.tsx  HomeCapsuleSelector.tsx  InfoPanel.tsx  LabeledRadioButton.tsx  Logo.tsx  TextSizePicker.tsx  Version.tsx
src/components/documents/: GeminiDocument.tsx  PlainDocument.tsx  SuccessDocument.tsx
src/dialogs/: AboutDialog.tsx  AboutDialogPanel.tsx  Dialog.tsx  InputDialog.tsx  InputDialogPanel.tsx  SettingsDialog.tsx  SettingsDialogPanel.tsx
src/styles/: App.css  BookmarkPanel.css  HamburgerMenu.css  SettingsDialog.css
