[package]
name = "jimini"
version = "0.1.2"
description = "A Gemini Browser"
authors = ["psobolik@zoho.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-exists", "fs-create-dir", "fs-write-file", "fs-read-file", "path-all", "dialog-save", "cli"] }
url = "2"
open = "5.1.1"
base64 = "0.22.1"

[dependencies.gemini-lib]
git = "https://github.com/psobolik/gemini-lib.git"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
